Added steps and a lot of links to docs.